--- a/src/_sass/sites/default/files/dynabook-b2b/assets_2025/css/00_04_object/project/business/_p-amd.scss
+++ b/src/_sass/sites/default/files/dynabook-b2b/assets_2025/css/00_04_object/project/business/_p-amd.scss
@@ -92,6 +92,8 @@
       @include setSizePCCus(padding-bottom, 202);
       @include setSizePCCus(margin-bottom, -193);
       overflow: hidden;
+      position: relative;
+      z-index: 2;
       @include mediaQuery(sp) {
         padding-top: pxToVw(10);
         padding-bottom: pxToVw(243);
@@ -250,16 +252,45 @@
 
     // sec-about
     .sec-about {
-      background-image: url(#{$imagePath}business/amd/about_bg.png);
-      background-size: cover;
-      background-position: center top;
-      background-repeat: no-repeat;
+      overflow: hidden;
+      position: relative;
+      z-index: 1;
+      background-image: linear-gradient( 150deg, #000000 35%, #3E3E3E 100%);
+      clip-path: polygon(
+        100% 0, /* top-right */
+        0 calc((139 / 1440) * 100vw), /* go down */
+        0 calc(100% - (111 / 1440) * 100vw), /* go up */
+        100% 100% /* bottom-right */
+      );
       @include setSizePCCus(padding-top, 173);
       @include setSizePCCus(padding-bottom, 168);
+      &::before {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background-image: url(#{$imagePath}business/amd/about_bg.png);
+        background-size: 156%;
+        background-position: calc(-540/1440)*100vw calc(35/1440)*100vw;
+        background-repeat: no-repeat;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+      }
       @include mediaQuery(sp) {
-        background-image: url(#{$imagePath}business/amd/about_bg_sp.png);
         padding-top: pxToVw(106);
         padding-bottom: pxToVw(118);
+        clip-path: polygon(
+          100% 0, /* top-right */
+          0 pxToVw(30), /* go down */
+          0 calc(100% - pxToVw(30)), /* go up */
+          100% 100% /* bottom-right */
+        );
+        &::before {
+          background-image: url(#{$imagePath}business/amd/about_bg_sp.png);
+          background-size: 131%;
+          background-position: pxToVw(-52) pxToVw(185);
+        }
       }
       &__inner {
         @include setSizePCCus(width, 1120);
@@ -1129,11 +1160,12 @@
               justify-content: center;
               align-items: center;
               background-color: #fff;
-              clip-path: polygon(0% 0%, calc(100% - 10px) 0%, 100% 50%, calc(100% - 10px) 100%, 0 100%);
+              clip-path: polygon(0% 0%, calc(100% - (10/1440)*100vw) 0%, 100% 50%, calc(100% - (10/1440)*100vw) 100%, 0 100%);
               z-index: 2;
               @include setSizePC4(padding, 2, 12, 2, 8);
               @include mediaQuery(sp) {
                 padding: pxToVw(2) pxToVw(12) pxToVw(2) pxToVw(8);
+                clip-path: polygon(0% 0%, calc(100% - pxToVw(10)) 0%, 100% 50%, calc(100% - pxToVw(10)) 100%, 0 100%);
               }
             }
           }
