--- a/src/_ejs/business/contents/amd/index.ejs
+++ b/src/_ejs/business/contents/amd/index.ejs
@@ -297,6 +297,7 @@ isTop:'true'
                     <div class="box-product__cpu--wrap">
                       <div class="box-product__cpu">
                         <p class="box-product__cpu--label">CPU</p>
+                        <p class="box-product__cpu--arrow"></p>
                         <p class="box-product__cpu--value">AMD Ryzen™™ PRO200シリーズプロセッサー・<br>AMD Ryzen™™ 200シリーズプロセッサー</p>
                       </div>
                       <ul class="box-product__logos">
@@ -382,6 +383,7 @@ isTop:'true'
                     <div class="box-product__cpu--wrap">
                       <div class="box-product__cpu">
                         <p class="box-product__cpu--label">CPU</p>
+                        <p class="box-product__cpu--arrow"></p>
                         <p class="box-product__cpu--value">AMD Ryzen™ PRO200シリーズプロセッサー・<br>AMD Ryzen™ 200シリーズプロセッサー</p>
                       </div>
                       <ul class="box-product__logos">
@@ -467,6 +469,7 @@ isTop:'true'
                     <div class="box-product__cpu--wrap">
                       <div class="box-product__cpu">
                         <p class="box-product__cpu--label">CPU</p>
+                        <p class="box-product__cpu--arrow"></p>
                         <p class="box-product__cpu--value">AMD Ryzen™ PRO200シリーズプロセッサー・<br>AMD Ryzen™ 200シリーズプロセッサー</p>
                       </div>
                       <ul class="box-product__logos">
@@ -545,6 +548,7 @@ isTop:'true'
                     <div class="box-product__cpu--wrap">
                       <div class="box-product__cpu">
                         <p class="box-product__cpu--label">CPU</p>
+                        <p class="box-product__cpu--arrow"></p>
                         <p class="box-product__cpu--value">AMD Ryzen™ 7000 シリーズ プロセッサー</p>
                       </div>
                       <ul class="box-product__logos">
