--- a/src/_sass/sites/default/files/dynabook-b2b/assets_2025/css/00_04_object/project/business/_p-amd.scss
+++ b/src/_sass/sites/default/files/dynabook-b2b/assets_2025/css/00_04_object/project/business/_p-amd.scss
@@ -280,6 +280,7 @@
       @include mediaQuery(sp) {
         padding-top: pxToVw(106);
         padding-bottom: pxToVw(118);
+        background-image: linear-gradient( 150deg, #000000 0%, #3E3E3E 100%);
         clip-path: polygon(
           100% 0, /* top-right */
           0 pxToVw(30), /* go down */
@@ -313,8 +314,8 @@
         }
         @include mediaQuery(sp) {
           margin-bottom: pxToVw(45);
-          padding-left: pxToVw(6);
-          padding-right: pxToVw(6);
+          padding-left: 0.5vw;
+          padding-right: 0.5vw;
           &__txt {
             font-size: pxToVw(16);
             &:not(:first-of-type) {
@@ -605,6 +606,7 @@
           @include mediaQuery(sp) {
             font-size: pxToVw(32);
             margin-bottom: pxToVw(7);
+            margin-right: -3vw;
           }
         }
         .text {
@@ -678,8 +680,8 @@
         @include setSizePCCus(margin-bottom, 88);
         @include mediaQuery(sp) {
           font-size: pxToVw(32);
-          padding-left: pxToVw(35);
-          padding-right: pxToVw(35);
+          padding-left: 8vw;
+          padding-right: 8vw;
           margin-bottom: pxToVw(65);
         }
       }
@@ -745,8 +747,8 @@
           @include setSizePCCus(margin-bottom, 15);
           @include mediaQuery(sp) {
             font-size: pxToVw(32);
-            margin-left: pxToVw(-5);
-            margin-right: pxToVw(-5);
+            margin-left: -0.5vw;
+            margin-right: -4vw;
             margin-bottom: pxToVw(15);
           }
         }
@@ -861,7 +863,6 @@
           }
         }
         &__desc {
-          @include setSizePCCus(width, 458);
           @include sizePC_d(24);
           font-weight: 600;
           line-height: 1.5;
@@ -870,7 +871,6 @@
           position: relative;
           z-index: 1;
           @include mediaQuery(sp) {
-            width: 100%;
             font-size: pxToVw(24);
           }
         }
@@ -883,7 +883,7 @@
           color: #fff;
           line-height: 1;
           &--main {
-            @include sizePC_d(60);
+            @include sizePC_d(58);
             @include setSizePCCus(margin-bottom, -10);
           }
           &--sub {
@@ -892,7 +892,7 @@
           @include mediaQuery(sp) {
             gap: pxToVw(10);
             &--main {
-              font-size: pxToVw(60);
+              font-size: pxToVw(58);
               margin-bottom: pxToVw(-10);
             }
             &--sub {
@@ -941,23 +941,44 @@
           @include setSizePCCus(width, 216);
           @include setSizePCCus(padding-top, 16);
           @include setSizePCCus(padding-bottom, 16);
+          @include setSizePCCus(padding-left, 10);
           @include setSizePCCus(margin-top, 10);
+          @include sizePC_d(18);
           margin-right: 0;
           background-color: #fff;
           color: #960009;
           font-weight: 700;
+          overflow: hidden;
+          position: relative;
           &::after {
             background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M6.6665 5.33301L9.33317 7.99967L6.6665 10.6663' stroke='%23960009' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
             filter: none;
             @include setSizePCCus(right, 30);
           }
+          &::before {
+            content: '';
+            width: 100%;
+            height: 100%;
+            background-color: rgb(0, 0, 0, 0);
+            position: absolute;
+            top: 0;
+            left: 0;
+            transition: all 0.3s;
+          }
+          &:hover {
+            &::before {
+              background-color: rgb(0, 0, 0, 0.3);
+            }
+          }
           @include mediaQuery(sp) {
             width: pxToVw(216);
             padding-top: pxToVw(16);
             padding-bottom: pxToVw(16);
+            padding-left: pxToVw(10);
             margin-top: pxToVw(30);
             margin-left: auto;
             margin-right: auto;
+            font-size: pxToVw(18);
             &::after {
               right: pxToVw(30);
             }
@@ -1053,7 +1074,7 @@
               border-radius: 50%;
               background-color: #595758;
               color: #fff;
-              @include sizePC_d(12);
+              @include sizePC_d(14);
               font-weight: 500;
               display: flex;
               justify-content: center;
@@ -1227,12 +1248,6 @@
         .box-product__header {
           margin-bottom: 0;
         }
-        .box-product__desc {
-          @include setSizePCCus(width, 366);
-          @include mediaQuery(sp) {
-            width: 100%;
-          }
-        }
         .box-product__image {
           top: calc(50% - (20/1440) * 100vw);
           &--img {
@@ -1266,16 +1281,13 @@
           &--logo {
             display: inline-block;
             @include setSizePCCus(width, 157);
+            @include mediaQuery(sp) {
+              width: pxToVw(157);
+            }
           }
         }
       }
       .box-product-03 {
-        .box-product__desc {
-          @include setSizePCCus(width, 439);
-          @include mediaQuery(sp) {
-            width: 100%;
-          }
-        }
         .box-product__image {
           &--img {
             @include setSizePCCus(width, 240);
@@ -1287,12 +1299,6 @@
       }
       .box-product-04 {
         margin-bottom: 0;
-        .box-product__desc {
-          @include setSizePCCus(width, 350);
-          @include mediaQuery(sp) {
-            width: 100%;
-          }
-        }
         .box-product__image {
           &--img {
             @include setSizePCCus(width, 205);
@@ -1372,6 +1378,22 @@
           border: 1px solid #fff;
           @include setSizePCCus(border-radius, 10);
           overflow: hidden;
+          position: relative;
+          &::after {
+            content: '';
+            width: 100%;
+            height: 100%;
+            background-color: rgb(0, 0, 0, 0);
+            position: absolute;
+            top: 0;
+            left: 0;
+            transition: all 0.3s;
+          }
+          &:hover {
+            &::after {
+              background-color: rgb(0, 0, 0, 0.3);
+            }
+          }
           &-01 {
             .icon {
               img {
@@ -1467,6 +1489,10 @@
         color: #FFFFFF;
         position: relative;
         @include setSizePCCus(gap, 28);
+        transition: all 0.3s;
+        &:hover {
+          filter: contrast(300%) grayscale(100%) saturate(0%);
+        }
         &::before {
           content: '';
           @include setSizePCCus(width, 36);
