--- a/src/_sass/sites/default/files/dynabook-b2b/assets_2025/css/00_04_object/project/business/_p-amd.scss
+++ b/src/_sass/sites/default/files/dynabook-b2b/assets_2025/css/00_04_object/project/business/_p-amd.scss
@@ -98,6 +98,10 @@
         padding-top: pxToVw(10);
         padding-bottom: pxToVw(243);
       }
+      @media screen and (min-width: 1441px) {
+        padding-top: 7vw;
+        padding-bottom: 12vw;
+      }
       &__inner {
         @include setSizePCCus(width, 1440);
         margin: 0 auto;
@@ -280,7 +284,7 @@
       @include mediaQuery(sp) {
         padding-top: pxToVw(106);
         padding-bottom: pxToVw(118);
-        background-image: linear-gradient( 150deg, #000000 0%, #3E3E3E 100%);
+        background-image: linear-gradient( 150deg, #000000 0%, #3E3E3E 35%, #3E3E3E 100%);
         clip-path: polygon(
           100% 0, /* top-right */
           0 pxToVw(30), /* go down */
@@ -680,8 +684,8 @@
         @include setSizePCCus(margin-bottom, 88);
         @include mediaQuery(sp) {
           font-size: pxToVw(32);
-          padding-left: 8vw;
-          padding-right: 8vw;
+          padding-left: 6vw;
+          padding-right: 6vw;
           margin-bottom: pxToVw(65);
         }
       }
@@ -1378,6 +1382,7 @@
           border: 1px solid #fff;
           @include setSizePCCus(border-radius, 10);
           overflow: hidden;
+          cursor: pointer;
           position: relative;
           &::after {
             content: '';
