--- a/src/_sass/sites/default/files/dynabook-b2b/assets_2025/css/00_04_object/project/business/_p-amd.scss
+++ b/src/_sass/sites/default/files/dynabook-b2b/assets_2025/css/00_04_object/project/business/_p-amd.scss
@@ -976,12 +976,15 @@
             width: pxToVw(216);
             padding-top: pxToVw(16);
             padding-bottom: pxToVw(16);
-            padding-left: pxToVw(10);
+            padding-left: pxToVw(32);
             margin-top: pxToVw(30);
             margin-left: auto;
             margin-right: auto;
             font-size: pxToVw(18);
+            text-align: left;
             &::after {
+              width: pxToVw(16);
+              height: pxToVw(16);
               right: pxToVw(30);
             }
           }
