--- a/src/_ejs/business/contents/amd/index.ejs
+++ b/src/_ejs/business/contents/amd/index.ejs
@@ -70,7 +70,7 @@ isTop:'true'
                       <li class="u-font__en item">GA83<span>/XY</span></li>
                     </ul>
                   </div>
-                  <a href="#" class="u-font__castoro c-btn__linkBase-black c-ico__arrow-white sec-kv__button">
+                  <a href="#pc_lineup" class="u-font__castoro c-btn__linkBase-black c-ico__arrow-white sec-kv__button">
                     <span>PC Lineup</span>
                   </a>
                 </div>
@@ -267,10 +267,9 @@ isTop:'true'
               </div>
             </section>
 
-            <section class="sec-PCLineup">
+            <section id="pc_lineup" class="sec-PCLineup">
               <div class="sec-PCLineup__inner">
                 <h2 class="c-heading__01 is-line-black sec-PCLineup__heading">PC Lineup</h2>
-
                 <div class="box-product box-product-01">
                   <p class="u-font__castoro box-product__lblnew">NEW</p>
                   <div class="box-product__header">
